# educational_practice

./: CMakeLists.txt  CONVEX.IN  CONVEX.OUT  for_while_if_else_int.txt  main  main.c
algorithms/task/: 10_refactor_text.h  1_convert_to_metric_system.h  2_determine_triangle.h  3_points_inside_ellipse.h  4_subtrack_average.h  5_is_transposed_matrix.h  6_get_upper_envelope.h  7_get_multiples_of_eleven.h  8_find_convex_hull.h  9_matrix_multiplication.h
data_structures/matrix/: matrix.c  matrix.h
file_for_tasks/8_find_convex_hull/: test_four_points.IN  test_four_points.OUT  test_more_points.IN  test_three_points.IN  test_three_points.OUT
